--- a/grupo5i/alumno/templates/index.html
+++ b/grupo5i/alumno/templates/index.html
@@ -4,11 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'estilos.css' %}">
-    <title>Document</title>
+    <link  rel="stylesheet" href="{% static 'estilos.css' %}">
+    <title>Documento</title>
 </head>
 <body>
-    <h1>Desde Templates!!</h1>
+    <h1>Desde Templates</h1>
+    <hr>
+    <ul>
+        {% for i in misalumnos %}
+        <li>{{i.nombre}}</li>
+
+        {% endfor %}
+
+    </ul>
 </body>
-<script src="{% static 'scripts.js' %}"></script>
+<script src ="{% static 'scripts.js' %}" ></script>
+
 </html>
